# discord_dollar

./: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml
discord_dollar/: crawler.py  log.py  main.py  repository.py
discord_dollar/bot/: __init__.py  commands.py  conf.py  config.py  routines.py  tasks.py  utils.py
discord_dollar/configure/: log.py
discord_dollar/crawler/: crawler.py
discord_dollar/repository/: adapter.py  config.py  models.py
