[tool.poetry]
name = "discord-dollar"
version = "0.1.0"
description = ""
authors = ["Henrique Rocha <henriquerocha@tutanota.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.10"
loguru = "^0.6.0"
py-cord = "^2.3.2"
pandas = "^1.5.2"
sqlalchemy = "^1.4.46"
python-dotenv = "^0.21.0"
selenium = "^4.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
